<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchPage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomNavigation">

        <RelativeLayout
            android:layout_marginLeft="35dp"
            android:layout_marginRight="30dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/SearchBar"
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/Search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Search"
                    android:textColorHint="#A8A9AB"
                    android:layout_centerVertical="true"
                    android:background="@drawable/search_button"
                    android:paddingEnd="10dp"
                    android:layout_marginTop="10dp"/>

                <Button
                    android:id="@+id/SearchLogo"
                    android:background="@drawable/searchlogo"
                    android:layout_centerVertical="true"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>

            <!-- Filter Buttons -->
            <LinearLayout
                android:id="@+id/FilterButtons"
                android:layout_below="@id/SearchBar"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/FilterAll"
                    android:text="All"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:background="@drawable/rectangle_button_green"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/FilterFollowers"
                    android:text="Followers"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:textColor="#58442F"
                    android:background="@drawable/rectangle_button_unselected"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/FilterFollowing"
                    android:text="Following"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:textColor="#58442F"
                    android:background="@drawable/rectangle_button_unselected"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            </LinearLayout>

            <!-- Recent Searches Section -->
            <TextView
                android:id="@+id/Heading"
                android:layout_below="@id/FilterButtons"
                android:text="Recent searches"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#58442F"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recentSearchesRecyclerView"
                android:layout_below="@id/Heading"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_recent_searches"/>

            <!-- Searched Section -->
            <TextView
                android:id="@+id/SearchedHeading"
                android:layout_below="@id/recentSearchesRecyclerView"
                android:layout_marginTop="5dp"
                android:text="Searched"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#58442F"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/searchedUsersRecyclerView"
                android:layout_below="@id/SearchedHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_searched_user"/>

        </RelativeLayout>
    </ScrollView>

    <!-- Bottom Navigation Bar -->
    <RelativeLayout
        android:id="@+id/bottomNavigation"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="70dp">

        <Button
            android:id="@+id/Home"
            android:background="@drawable/housesymbolgrey"
            android:layout_centerVertical="true"
            android:layout_width="25dp"
            android:layout_height="35dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"/>

        <Button
            android:id="@+id/myBtn"
            android:background="@drawable/searchsymbolgreen"
            android:layout_centerVertical="true"
            android:layout_width="25dp"
            android:layout_height="35dp"
            android:layout_toRightOf="@id/Home"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <ImageButton
            android:id="@+id/NewPost"
            android:src="@drawable/plus_sign"
            android:background="@drawable/green_circle"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/myBtn"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <Button
            android:id="@+id/Profile"
            android:background="@drawable/profilelogogrey"
            android:layout_width="25dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/NewPost"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <Button
            android:id="@+id/Contact"
            android:background="@drawable/contactslogogrey"
            android:layout_width="30dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/Profile"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

    </RelativeLayout>

</RelativeLayout>