<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/searchedProfilePic"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/dummyprofilepic"/>

    <Button
        android:id="@+id/followButton"
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/rectangle_button_green"
        android:text="Follow"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/searchedUsername"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/searchedProfilePic"
        android:layout_toStartOf="@id/followButton"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="Username"
        android:textSize="18sp"
        android:textColor="#58442F"/>

    <TextView
        android:id="@+id/followedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="Followed"
        android:textColor="#58442F"
        android:textSize="14sp"
        android:visibility="gone"/>

</RelativeLayout>