...
                android:hint="Username"
                android:padding="10dp"
                android:background="@null"
                android:inputType="text"/>

            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/Username"
                android:layout_marginTop="20dp"
                android:hint="Password"
                android:padding="10dp"
...

            <Button
                android:id="@+id/myBtn"
                android:layout_below="@id/ForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:elevation="16dp"
                android:background="@drawable/rectangle_button_green"/>

...
